| Bug #5369 | wrong initial value of auto increment in mysql cluster | ||
|---|---|---|---|
| Submitted: | 2 Sep 2004 15:48 | Modified: | 10 Sep 2004 17:17 |
| Reporter: | Tomas Ulin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 4.13, 4.1.4 | OS: | Any (any) |
| Assigned to: | Tomas Ulin | CPU Architecture: | Any |
[2 Sep 2004 15:48]
Tomas Ulin
[10 Sep 2004 17:17]
Tomas Ulin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
