fixed wrong initial auto increment value bug#5369